<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.sealdice.dice.MainActivity">
    <item
        android:id="@+id/action_settings"
        android:icon="?attr/seal_settings_icon"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_official_website"
        android:orderInCategory="100"
        android:title="@string/action_official_website"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_battery_setting"
        android:orderInCategory="100"
        android:title="@string/action_battery_setting"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_check_update"
        android:orderInCategory="100"
        android:title="@string/action_check_update"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_about"
        android:orderInCategory="100"
        android:title="@string/action_about"
        app:showAsAction="never" />
</menu>